--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h1{
 section{
 
     display: flex;
+    margin-bottom: 150px;
 }
 
 .half{
@@ -43,4 +44,11 @@ section{
 
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.dream-big{
+
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
