--- a/style.css
+++ b/style.css
@@ -7,12 +7,16 @@ h1{
     font-size:50px;
 }
 
+h2{
+    font-size: 40px;
+}
+
 .orange-color{
 
     color: orange;
 }
 
-section{
+.flexible-container{
 
     display: flex;
     margin-bottom: 150px;
@@ -51,4 +55,35 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.experiance{
+
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+
+.exp{
+    width: 80%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 10px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+}
+
+#full{
+
+    border-left: 7px solid tomato;
+}
+
+#baby{
+    border-left: 7px solid blue;
+}
+
+footer p{
+
+    text-align: center;
 }
